--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,20 @@
 ---
+- name: Configure PG cluster
+  include_role:
+    name: devgateway.postgres-replication
+  vars:
+    pg_version: "{{ pgha_postgres.version }}"
+    pgrs_master: "{{ pgha_master }}"
+    pgrs_slave: "{{ pgha_slave }}"
+    pgrs_virtual_ip: "{{ pgha_virtual_ip }}"
+    pgrs_data_dir: "{{ pgha_postgres.data_dir }}"
+    pgrs_bin_dir: "{{ pgha_postgres.bin_dir }}"
+    pgrs_archive_dir: "{{ pgha_postgres.archive_dir }}"
+    pgrs_service: "{{ pgha_postgres.service }}"
+    pgrs_user:
+      type: host
+      name: "{{ pgha_repl_user }}"
+      database: replication
+      address: samenet
+      method: md5
+      password: "{{ pgha_repl_passwd }}"
