--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,3 +18,108 @@
       address: samenet
       method: md5
       password: "{{ pgha_repl_passwd }}"
+
+- name: Set up high availability
+  include_role:
+    name: devgateway.pacemaker
+  vars:
+    pacemaker_pretty_xml: true
+    pacemaker_password: "{{ pgha_pcmk_passwd | mandatory }}"
+    pacemaker_cluster_name: "{{ pgha_pcmk_cluster_name }}"
+    pacemaker_cluster_options:
+      stonith-enabled: false
+      no-quorum-policy: ignore
+    pacemaker_resource_defaults:
+      resource_stickiness: INFINITY
+      migration_threshold: 1
+    pacemaker_simple_resources:
+      virtual-ip:
+        resource:
+          class: ocf
+          provider: heartbeat
+          type: IPaddr2
+        options:
+          ip: "{{ pgha_virtual_ip }}"
+        meta:
+          migration-threshold: 0
+        op:
+          - name: start
+            timeout: "{{ pgha_pcmk_default_op_timeout }}s"
+            interval: 0s
+            on-fail: restart
+          - name: monitor
+            timeout: "{{ pgha_pcmk_default_op_timeout }}s"
+            interval: "{{ pgha_pcmk_monitoring_intervals.virtual_ip }}s"
+            on-fail: restart
+          - name: stop
+            timeout: "{{ pgha_pcmk_default_op_timeout }}s"
+            interval: 0s
+            on-fail: restart
+    pacemaker_advanced_resources:
+      postgres:
+        type: master
+        meta:
+          master-max: 1
+          master-node-max: 1
+          clone-max: 2
+          clone-node-max: 1
+          notify: true
+        resources:
+          postgres-replica-set:
+            resource:
+              class: ocf
+              provider: heartbeat
+              type: pgsql
+            options:
+              pgctl: "{{ pgha_bin_dir }}/pg_ctl"
+              psql: "{{ pgha_bin_dir }}/psql"
+              pgdata: "{{ pgha_data_dir }}"
+              rep_mode: sync
+              node_list: "{{ pgha_master }} {{ pgha_slave }}"
+              restore_command: "{{ pgha_recovery_settings.restore_command }}"
+              master_ip: "{{ pgha_virtual_ip }}"
+              restart_on_promote: "true"
+              repuser: "{{ pgha_user.name }}"
+            op:
+              - action: start
+                options:
+                  on_fail: restart
+              - action: monitor
+                options:
+                  interval: "{{ pgha_pcmk_default_op_timeout.slave }}s"
+                  on_fail: restart
+              - action: monitor
+                options:
+                  role: Master
+                  interval: "{{ pgha_pcmk_default_op_timeout.master }}s"
+                  on_fail: restart
+              - action: promote
+                options:
+                  on_fail: restart
+              - action: demote
+                options:
+                  on_fail: stop
+              - action: stop
+                options:
+                  on_fail: block
+              - action: notify
+    pacemaker_constraints:
+      - type: colocation
+        rsc: virtual-ip
+        with-rsc: postgres
+        with-rsc-role: Master
+        score: INFINITY
+      - type: order
+        first: postgres
+        first-action: promote
+        then: virtual-ip
+        then-action: start
+        symmetrical: false
+        score: INFINITY
+      - type: order
+        first: postgres
+        first-action: demote
+        then: virtual-ip
+        then-action: stop
+        symmetrical: false
+        score: 0
