--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,1 +1,14 @@
 ---
+pgha_postgres:
+  version: "9.4"
+  data_dir: /var/lib/pgsql/9.4/data
+  bin_dir: /usr/pgsql-9.4/bin
+  archive_dir: /var/lib/pgsql/9.4/archive
+  service: postgresql-9.4
+pgha_repl_user: replication
+pgha_pcmk_cluster_name: postgres
+pgha_pcmk_default_op_timeout: 60
+pgha_pcmk_monitoring_intervals:
+  virtual_ip: 10
+  master: 3
+  slave: 7
